fix: adjust the gap between the panel and the search box

--- a/src/CascadeTree/styles/search.less
+++ b/src/CascadeTree/styles/search.less
@@ -1,6 +1,7 @@
 // Search panel
 .rs-cascade-search-view-panel {
   max-height: @cascader-search-panel-max-height;
+  margin-top: 6px;
   overflow: auto;
 }
 
